# signal-cli-api

./: Cargo.toml  README.md
src/: daemon.rs  jsonrpc.rs  lib.rs  main.rs  middleware.rs  state.rs  webhooks.rs
src/routes/: accounts.rs  attachments.rs  config.rs  contacts.rs  devices.rs  events.rs  groups.rs  helpers.rs  identities.rs  messages.rs  metrics.rs  mod.rs  openapi.rs  polls.rs  profiles.rs  reactions.rs  receipts.rs  search.rs  stickers.rs  system.rs  typing.rs  webhook_routes.rs
tests/: daemon_lifecycle.rs  regression.rs
